tests/valid_inputs/call_vararg_more.cpp

int foo(int i, ...) {
	return i;
}

int main() {
	return foo(42, 314);
}
