tests/invalid_inputs/sema/call_too_few_args.cpp

int foo(int i);

int main() {
	return foo();
}
